--- a/.home/.tmux.conf
+++ b/.home/.tmux.conf
@@ -1,1 +1,26 @@
-/home/piyush/.tmux.conf
+# change default prefix from C-b to C-Space
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+# Split windows using | and -
+unbind '"'
+unbind %
+bind | split-window -h
+bind - split-window -v
+
+# bind hotkey to reload tmux config
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
+
+# enable scrolling using mouse
+set -g mouse on
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @tmux_power_theme 'moon'
+
+# run status bar
+run '~/.dotfiles/tmux/statusbar.tmux'
+
+run '~/.tmux/plugins/tpm/tpm'
