--- a/.home/.tmux.conf
+++ b/.home/.tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
 
+# start numbering from 1 rather than 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # Split windows using | and -
 unbind '"'
 unbind %
